# eliteclean

./: .gitignore  README.md  cleaner.py  промпт1.txt
beta/: README.md  main.py
beta/static/css/: styles.css
beta/static/js/: app.js
beta/templates/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  memory.rs  models.rs  services.rs  state.rs  utils.rs
static/: index.html
static/css/: styles.css
static/js/: app.js
templates/: index.html
