[package]
name = "noxum-launcher"
version = "1.0.0"
description = "Steam Launcher / Noxum Cleaner - Desktop application for hidden Java app launch and system cleanup"
authors = ["Noxum Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "noxum_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "noxum-launcher"
path = "src/bin/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri v2
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP client для скачивания файлов
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }

# File system utilities
walkdir = "2"
tempfile = "3"

# Random bytes
rand = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Memory manipulation (аналог pymem для Windows)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
    "Win32_Security",
]}
memchr = "2"
ntapi = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
